package book;

public enum BookStatus {
    AVAILABLE,
    SOLD,
    CHECKED_OUT,
    RESERVED,
    ON_HOLD,
    LOST,
    DAMAGED
}
