package book;

public enum GenreEnum {
    FICTION,
    NON_FICTION,
    MYSTERY,
    FANTASY,
    SCIENCE_FICTION,
    BIOGRAPHY,
    HISTORICAL,
    ROMANCE,
    THRILLER,
    CHILDREN,
    YOUNG_ADULT,
    CLASSICS,
    SELF_HELP,
    POETRY,
    DYSTOPIAN,
    ADVENTURE,
    HORROR,
    GRAPHIC_NOVEL,
    RELIGIOUS,
    COOKBOOK,
    ANTHOLOGY
}
